Url fix for tux

--- a/Exploring the evolution of Linux/notebook.ipynb
+++ b/Exploring the evolution of Linux/notebook.ipynb
@@ -19,7 +19,7 @@
     "## 1. Introduction\n",
     "<p>Version control repositories like CVS, Subversion or Git can be a real gold mine for software developers. They contain every change to the source code including the date (the \"when\"), the responsible developer (the \"who\"), as well as little message that describes the intention (the \"what\") of a change.</p>\n",
     "<p><a href=\"https://commons.wikimedia.org/wiki/File:Tux.svg\">\n",
-    "<img style=\"float: right;margin:5px 20px 5px 1px\" width=\"150px\" src=\"https://s3.amazonaws.com/assets.datacamp.com/production/project_111/img/tux.png\" alt=\"Tux - the Linux mascot\">\n",
+    "<img style=\"float: right;margin:5px 20px 5px 1px\" width=\"150px\" src=\"img/tux.png\" alt=\"Tux - the Linux mascot\">\n",
     "</a></p>\n",
     "<p>In this notebook, we will analyze the evolution of a very famous open-source project &ndash; the Linux kernel. The Linux kernel is the heart of some Linux distributions like Debian, Ubuntu or CentOS. </p>\n",
     "<p>We get some first insights into the work of the development efforts by </p>\n",
